--- a/example/view/test.html
+++ b/example/view/test.html
@@ -1,5 +1,15 @@
+
 <p>
+    <div>template view/component/index.tin</div>
+    <div>template view/component/index.tin</div>
+    <div>template view/component/index.tin</div>
+    <div>template view/component/index.tin</div>
     <div>template view/component/index.tin</div>
 </p>
 
-<button onclick="testIndex()" class="btn btn-success">TEST</button>
+<div id='list'></div>
+
+<button onclick="tinway().get.test.set({test:'dddd'})" class="btn btn-success">TEST</button>
+<button onclick="tinway().get.test.set('ddd111')" class="btn btn-success">TEST</button>
+
+
