--- a/example/view/index.html
+++ b/example/view/index.html
@@ -1,5 +1,12 @@
 <div class="row">
     
+    <div class="mb-3">
+        <input type="email" id="email" onchange="tinway('onClick').get.index.b('email')" class="form-control">
+    </div>
+    
+    <div>template view2/index.tin</div>
+    <button onclick="tinway('onClick').set('index',{sss:'ss'})" class="btn btn-success">TEST INDEX</button>
+    <!-- <button onclick="tinway('onClick').get.index.b('test222')" class="btn btn-success">TESTYYY</button> -->
     <div class="col-md-6">
         
         <p>
@@ -8,6 +15,6 @@
 
     </div>
     
-    <template view='view/test' dataName='comIndex' class="col-md-6" />
+    <template modele='/js/test.js' />
     
 </div>
